<resources>
    <string name="app_name">GitHubAssignment</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_check_user_name">Check Username</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="enter_user">"Enter Username"</string>
    <string name="enter_pass">"Enter Password"</string>
    <string name="enter_correct_user">"Enter Correct Username"</string>
    <string name="check_connection">"Please check your connection"</string>
    <string name="something_wrong">"Something went wrong. Try again"</string>
    <string name="profile">"Profile"</string>
    <string name="public_repository">"See Public Repositories"</string>


    <string name="profile_name"> "Name"</string>
    <string name="profile_email"> "Email"</string>
    <string name="profile_company"> "Company Name"</string>
    <string name="profile_location"> "Location"</string>
    <string name="profile_bio"> "Bio"</string>
    <string name="twitter_username"> "Twitter Name"</string>
    <string name="no_of_public_repo"> "Public Repos"</string>
    <string name="total_private_repos"> "Private Repos"</string>
    <string name="followers"> "Followers"</string>
    <string name="user_type"> "User Type"</string>


    <string name="repos_name"> "Name"</string>
    <string name="repos_id"> "ID"</string>
    <string name="repos_language"> "Language"</string>
    <string name="repos_watcher"> "Watcher Count"</string>
    <string name="repos_open_issues"> "Open Issues"</string>
    <string name="repos_default_branch"> "Default Branch"</string>


</resources>
