<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/profile_name"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textSize="16dp"
            android:id="@+id/tv_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/profile_email"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textSize="16dp"
            android:id="@+id/tv_email"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/profile_company"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:id="@+id/tv_company"
            android:singleLine="true"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/profile_location"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textSize="16dp"
            android:id="@+id/tv_location"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/profile_bio"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textSize="16dp"
            android:id="@+id/tv_bio"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/twitter_username"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textSize="16dp"
            android:id="@+id/tv_twitter_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/no_of_public_repo"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textSize="16dp"
            android:id="@+id/tv_no_of_public_repos"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/followers"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textSize="16dp"
            android:id="@+id/tv_followers"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:text="@string/user_type"
            android:textStyle="bold"
            android:textSize="14dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textSize="16dp"
            android:id="@+id/tv_user_type"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>