<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:elevation="2dp"
        app:cardCornerRadius="5dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.3"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repos_name"
                    android:textSize="14dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:id="@+id/tv_repos_name"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.3"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repos_id"
                    android:textSize="14dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:id="@+id/tv_repos_id"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.3"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repos_language"
                    android:textSize="14dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@android:color/black"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:id="@+id/tv_repos_language"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.3"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repos_watcher"
                    android:textSize="14dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@android:color/black"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:id="@+id/tv_watcher"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.3"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repos_open_issues"
                    android:textSize="14dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@android:color/black"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:id="@+id/tv_issues"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.3"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repos_default_branch"
                    android:textSize="14dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:textColor="@android:color/black"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:id="@+id/tv_default_branch"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>